# tatar-scope

./: .gitignore  package-lock.json  package.json
src/: App.js
src/front/: package-lock.json  package.json
src/front/src/: App.tsx  index.css  index.tsx  interfaces.tsx
src/front/src/components/: EventComponent.tsx  FooterComponent.tsx  GroupComponent.tsx  HeaderComponent.css  HeaderComponent.tsx  Login.tsx  Signup.tsx
src/front/src/pages/: Events.tsx  Groups.tsx  LoginPage.tsx  MainPage.tsx  Profile.tsx
src/front/src/routes/: routes.tsx
src/http_api/: .env  Dockerfile  main.py  pyproject.toml
src/http_api/api/authentication/: authentication.py
src/http_api/api/routers/: users.py
src/http_api/core/: config.py
src/http_api/core/settings/: app.py
src/http_api/db/: __init__.py  mixins.py
src/http_api/db/migrations/: env.py
src/http_api/db/migrations/versions/: 65df19219eab_adding_user_table.py
src/http_api/db/models/: __init__.py  users.py
