[tool.poetry]
name = "http_api"
version = "0.1.0"
description = ""
authors = ["Yegor Shevchenko <egorhs19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.35"
loguru = "^0.6.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
psycopg2 = "^2.9.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
